syntax = "proto3";

option go_package = "main"; // TODO: ADD THIS go_package!!!

//--------------------------------------------------------------------
service Service1 { // module containing foreign functions
    rpc F1 (Params1) returns (Return1);
    rpc F2 (Params2) returns (Return2);
}
//--------------------------------------------------------------------
// param1 comment
message Params1 {
    repeated string p1 = 1; // param1 inline-comment
}
//--------------------------------------------------------------------
message Return1 {
    string r1 = 1;
}
//--------------------------------------------------------------------
message Params2 {
    string p21 = 1;
    Params1 p22 = 2;
}
//--------------------------------------------------------------------
message Return2 {
    string r21 = 1;
    Return1 r22 = 2;
}
//--------------------------------------------------------------------